<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
        <import type="com.udacity.shoestore.Converter"/>
    </data>
    <!--
     I choose constraint layout for this layout to simplify the view hierarchy.
     If i use linear layout, i will need four linear layouts to arrange the item
     views to look this way. Therefore i choose cosntraint layout for this layout
     -->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:layout_marginBottom="@dimen/medium_margin">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_shoe"
                    style="@style/normal_text_style"
                    android:layout_width="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@{shoe.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.285"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/normal_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/arvo"
                    android:text="@string/size"
                    app:layout_constraintStart_toStartOf="@+id/txt_shoe"
                    app:layout_constraintTop_toBottomOf="@+id/txt_shoe" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/normal_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/company"
                    app:layout_constraintStart_toStartOf="@+id/txt_shoe"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/normal_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/desc"
                    app:layout_constraintStart_toStartOf="@+id/txt_shoe"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/shoe_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/pict_1" />

                <TextView
                    android:id="@+id/txt_size"
                    style="@style/normal_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@{Converter.decimalToText(shoe.size)}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView7" />

                <TextView
                    android:id="@+id/txt_company"
                    style="@style/normal_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@{shoe.company}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView7" />

                <TextView
                    android:id="@+id/txt_desc"
                    style="@style/normal_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@{shoe.description}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView7" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

</layout>